--- a/locale.facet.html
+++ b/locale.facet.html
@@ -18,7 +18,8 @@ a facet, or a type that refers to a volatile-qualified facet, as an
 function expecting a facet, is ill-formed. A const-qualified facet is a
 valid template argument to any locale function that expects a Facet template
 parameter.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >The <span class='texttt'>refs</span>
-argument to the constructor is used for lifetime management.</p><ul class='itemize'><li id='2.1'><div class='marginalizedparent' style='left:-7em'><a class='marginalized' href='#2.1'>(2.1)</a></div><p >For
+argument to the constructor is used for lifetime management.
+For
 <span class='texttt'>refs == 0</span>,
 the implementation performs
 <span class='texttt'>delete static_cast&lt;locale::facet*&gt;(f)</span>
@@ -29,8 +30,7 @@ is a pointer to the facet) when the last
 object containing the facet is destroyed;
 for
 <span class='texttt'>refs == 1</span>,
-the implementation never destroys the facet.
-</p></li></ul></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Constructors of all
+the implementation never destroys the facet.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >Constructors of all
 facets defined in this Clause take such an argument and pass it
 along to their
 <span class='texttt'>facet</span>
